# physics_project_2

./: app.py  electromagnetics.py  pot.py  pyproject.toml
templates/: index.html
