[tool.poetry]
name = "phisics flask-project"
version = "0.1.0"
description = "Simple flask-app for Phisics classes"
authors = ["CHB-0r1s <borisluzin2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
